<resources>
    <string name="app_name">FMD-DOI</string>

    //COMMON
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="add_animal">Add an animal</string>
    <string name="add_tracing">Add tracings</string>
    <string name="timeline">View farm timeline</string>
    <string name="enter_date">Enter Date</string>
    <string name="zero">0</string>
    <string name="insert_notes">Insert Notes</string>
    <string name="category">Category</string>
    <string name="contact">Direct contact with animal areas</string>
    <string name="amount">Amount</string>

    //MAIN
    <string name="text_main">FMD-DOI | DISEASE OUTBREAK INVESTIGATION</string>
    <string name="header">EuFMD-DOI</string>
    <string name="welcome">WELCOME BACK</string>
    <string name="add_farm">Add\na farm</string>
    <string name="pre_farm">My\nfarms</string>
    <string name="bio">Biosecurity</string>
    <string name="diagn">Diagnostics</string>

    //FARM CREATION
    <string name="text_farm_creation">FARM INFORMATION</string>
    <string name="hint_vet">Vet name</string>
    <string name="hint_owner">Farm owner</string>
    <string name="hint_farm">Farm name</string>
    <string name="country">Select a country</string>

    //ANIMAL CREATION
    <string name="text_animal_creation">ANIMAL INFORMATION</string>
    <string name="id">Identification</string>
    <string name="hint_ID">ID/Name</string>
    <string name="hint_Group_ID">Group</string>
    <string name="age">Age</string>
    <string name="hint_years">Years</string>
    <string name="hint_months">Months</string>
    <string name="animal">Animal</string>
    <string name="hint_other">Other</string>
    <string name="hint_sign">Reported onset of clinical sign</string>
    <string name="vaccinated">Vaccination</string>

    //LESION AGEING
    <string name="text_lesion_ageing">LESION REPORT</string>
    <string name="vesicles">Vesicles</string>
    <string name="fibrin">Fibrin</string>
    <string name="gallery">Gallery</string>
    <string name="color">Color of the base of the erosion</string>
    <string name="red">Red</string>
    <string name="pink">Pink</string>
    <string name="yellow">Yellow</string>
    <string name="white">Grey/White</string>
    <string name="edges">Edges</string>
    <string name="heal">Healing/Re-epithelialisation</string>

    //POST LESION
    <string name="text_post_lesion">ANIMAL DATA COLLECTION</string>
    <string name="add_an_animal">Add another animal</string>
    <string name="take_photo">Take a photo</string>

    //TIMELINE
    <string name="date">Date</string>
    <string name="lesion">Lesion</string>
    <string name="source">Source</string>
    <string name="spread">Spread</string>
    <string name="sub_category">Sub-Category</string>
    <string name="notes">Notes</string>

    //TRACING
    <string name="text_tracing">Please select the type of tracing</string>
    <string name="animal_movements">Animal Movements</string>
    <string name="prosucts">Products</string>
    <string name="people">People</string>
    <string name="vehicles">Vehicles</string>

    //ANIMAL TRACK
    <string name="text_animal_track">Animal movements - more information</string>
    <string name="species">Species</string>
    <string name="number">Number</string>

    //PEOPLE TRACK
    <string name="text_people_track">People - more information</string>

    //PRODUCT TRACK
    <string name="text_product_track">Products - more information</string>

    //VEICHLE TRACK
    <string name="text_veichle_track">Vehicles - more information</string>

    //COMPLETE
    <string name="text_complete">LESION AGEING CALCULATOR</string>
    <string name="lesion_id">Lesion ID</string>
    <string name="g_samples">Gallery samples</string>
    <string name="days">Lesion ageing in days</string>
    <string name="diagn_opt">View diagnostic options</string>
    <string name="add_lesion">Add another lesion</string>
    <string name="add_timeline">Add to farm timeline</string>
    <string name="assumptions">View assumptions</string>

    //ERROR
    <string name="error">ERROR</string>
    <string name="text_error">Please try again. </string>
    <string name="start_again">Start again</string>

    //QUESTIONS
    <string name="q1">Is there a vesicle?</string>
    <string name="q2">Is there fibrin present?</string>
    <string name="q3">What colour is the base of the erosion?</string>
    <string name="q4">How do the edges appear?</string>
    <string name="round">Round/Smooth</string>
    <string name="sharp">Sharp</string>
    <string name="q5">What is the extent of healing (re-epithelialisation) from around the edges of the lesion?</string>
    <string name="small">Healing (small)</string>
    <string name="lot">Healing (a lot)</string>
    <string name="photo">See photo examples</string>

    //DIAGNOSTICS OVERVIEW
    <string name="text_diagn_ovw">DIAGNOSTIC OVERVIEW</string>
    <string name="par_one">Samples and tests for virus</string>
    <string name="btn_vesicular">Vesicular fluid</string>
    <string name="btn_epithelium">Epithelium samples</string>
    <string name="btn_swabs">Swabs</string>
    <string name="btn_probang">Probang</string>
    <string name="par_two">Tests for antibody</string>
    <string name="btn_structural">Structural protein antibodies</string>
    <string name="btn_non_structural">Non-structural protein antibodies</string>

    //DIAGNOSTIC OPTIONS
    <string name="text_diagn_opt">DIAGNOSTIC OPTIONS</string>

    //ASSUMPTIONS
    <string name="text_asssumpt">ASSUMPTIONS</string>

    //GALLERY
    <string name="text_gallery">LESION LIBRARY</string>

    //PARSE KEY
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">UKd48bFQpCmN9ovQ5TuiBvhv3UQUgGfnije37tB4</string>
    <string name="back4app_client_key">ey69cIIu4F0MPwbmomhma3JIJKIDWtE7ONsPjrYM</string>

</resources>
