<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/timeline"
            android:showDividers="middle"
            android:divider="?android:listDivider"
            android:stretchColumns="*">

            <TableRow
                android:id="@+id/header"
                android:layout_weight="1">
                <TextView
                    android:text="@string/date"
                    android:padding="3dip"
                    android:gravity="center"/>
                <TextView
                    android:text="@string/lesion"
                    android:padding="3dip" />
                <TextView
                    android:text="@string/source"
                    android:padding="3dip" />
                <TextView
                    android:text="@string/spread"
                    android:padding="3dip" />
                <TextView
                    android:text="@string/category"
                    android:padding="3dip"
                    android:gravity="center"/>
                <TextView
                    android:text="@string/sub_category"
                    android:padding="3dip" />
                <TextView
                    android:text="@string/notes"
                    android:padding="3dip"/>
            </TableRow>

        </TableLayout>

    </HorizontalScrollView>

</ScrollView>