<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnimalCreation">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/text_animal_creation"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="36dp" />

    <EditText
        android:id="@+id/animalID"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:hint="@string/hint_ID"
        android:inputType="number"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="35dp" />

    <EditText
        android:id="@+id/groupID"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/animalID"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:hint="@string/hint_Group_ID"
        android:inputType="text"
        android:layout_alignParentRight="true"
        android:layout_marginRight="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="18sp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="190dp"/>

    <EditText
        android:id="@+id/animalYears"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="210dp"
        android:ems="10"
        android:hint="@string/hint_years"
        android:inputType="number" />

    <EditText
        android:id="@+id/animalMonths"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="210dp"
        android:ems="10"
        android:hint="@string/hint_months"
        android:inputType="number" />

    <Spinner
        android:id="@+id/breed"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/animalMonths"
        android:layout_alignParentStart="true"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginBottom="-1dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_alignParentLeft="true"
        />

    <EditText
        android:id="@+id/other"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/animalMonths"
        android:layout_alignParentStart="true"
        android:layout_marginStart="200dp"
        android:layout_marginBottom="-1dp"
        android:layout_alignParentLeft="true"
        android:hint="@string/hint_other"
        android:visibility="invisible"
        android:layout_marginLeft="200dp" />

    <EditText
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="274dp"
        android:layout_marginBottom="178dp"
        android:hint="@string/hint_sign"
        android:focusable="false" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/check"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="-3dp"
        android:text="@string/vaccinated"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/groupID"
        android:layout_alignRight="@+id/groupID"
        android:layout_alignParentTop="true"
        android:layout_marginTop="354dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="99dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/yes_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/no_chck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />

    </RadioGroup>

    <Button
        android:id="@+id/addAnimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:text="@string/done" />


</RelativeLayout>