<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".DiagnosticsOverview">

    <FrameLayout
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="44dp"
            android:text="@string/par_one"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="31dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignParentStart="true"
            android:background="#000000"
            android:layout_alignParentLeft="true" />

        <Button
            android:id="@+id/vesicular"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="114dp"
            android:text="@string/btn_vesicular" />

        <Button
            android:id="@+id/epithelium"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/vesicular"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="29dp"
            android:layout_marginRight="29dp"
            android:text="@string/btn_epithelium" />

        <Button
            android:id="@+id/swabs"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/vesicular"
            android:layout_alignParentTop="true"
            android:layout_marginTop="209dp"
            android:text="@string/btn_swabs"
            android:layout_alignLeft="@+id/vesicular" />

        <Button
            android:id="@+id/probang"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/epithelium"
            android:layout_alignLeft="@+id/epithelium"
            android:layout_alignBottom="@+id/swabs"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="-1dp"
            android:text="@string/btn_probang" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="325dp"
            android:text="@string/par_two"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="31dp" />

        <View
            android:id="@+id/view"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="-282dp"
            android:background="#000000"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp" />

        <Button
            android:id="@+id/structural"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/vesicular"
            android:layout_alignLeft="@+id/vesicular"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginBottom="89dp"
            android:text="@string/btn_structural" />

        <Button
            android:id="@+id/non_structural"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView7"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="33dp"
            android:text="@string/btn_non_structural"
            android:layout_alignRight="@+id/textView7" />

    </RelativeLayout>

</RelativeLayout>