<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/animal_popup"
    android:layout_width="wrap_content"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:paddingRight="60dp"
    android:paddingLeft="60dp"
    android:background="@drawable/custom_border"
    tools:context=".AnimalTrackFragment">

    <EditText
        android:id="@+id/date"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:hint="@string/enter_date"
        android:focusable="false"
        android:background="#ffffff"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/species"
        android:layout_alignLeft="@+id/species"
        android:layout_alignBottom="@+id/species"
        android:layout_marginBottom="43dp"
        android:text="@string/species"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/species"
        style="@style/Widget.AppCompat.DropDownItem.Spinner"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:background="#ffffff"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/other"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:background="#ffffff"
        android:hint="@string/hint_other"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/note"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:background="#ffffff"
        android:hint="@string/insert_notes"
        android:inputType="text" />

    <Button
        android:id="@+id/done"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/add" />

</RelativeLayout>